objects/Sandbox__c.object
<CustomObject>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_URL__c</fullName>
        <label>Domain URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Refresh_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Refresh By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sandboxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Refresh__c</fullName>
        <label>Last Refresh</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LicenseType__c</fullName>
        <label>LicenseType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LicenseType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Poll_Time__c</fullName>
        <label>Poll Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_Info_Id__c</fullName>
        <label>Sandbox Info Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Org</label>
        <referenceTo>Sandbox__c</referenceTo>
        <relationshipLabel>Sandboxes</relationshipLabel>
        <relationshipName>Sandboxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Status</valueSetName>
        </valueSet>
    </fields>
    <label>Sandbox</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LicenseType__c</columns>
        <columns>Status__c</columns>
        <columns>Sandbox_Info_Id__c</columns>
        <columns>Source_Org__c</columns>
        <columns>Domain_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sandbox Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sandboxes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>